Improved help text message for Contact metadata values in Citation Metadata tab on dataset. Fixed render of HTML help text popover on for Description field on edit/create dataset. Improved layout and spacing of upper-right corner icons for cards on search-include. [ref #1946 #1923]

--- a/src/main/webapp/resources/css/structure.css
+++ b/src/main/webapp/resources/css/structure.css
@@ -371,7 +371,7 @@ div[id$='resultsTable'] div.file-tags-block span.label:first-of-type {margin-lef
 div[id$='resultsTable'] .resultDatasetCitationBlock {display:block;margin:4px 0 .5em 60px;padding:4px;}
 div[id$='resultsTable'] .resultDatasetCitationBlock span.search-term-match {font-weight: normal;}
 div[id$='resultsTable'] div.card-title-icon-block span[class^='icon'],
-div[id$='resultsTable'] div.card-title-icon-block span[class^='glyphicon'] {font-size:1.3em;}
+div[id$='resultsTable'] div.card-title-icon-block span[class^='glyphicon'] {font-size:1.3em; margin-left:3px;}
 div[id$='resultsTable'] div.card-title-icon-block span[class^='glyphicon'] {margin-top:3px;}
 div[id$='resultsTable'] div.card-preview-icon-block {width:48px; float:left; margin:4px 12px 6px 0;}
 div[id$='resultsTable'] div.card-preview-icon-block a {display:block; height:48px; line-height:48px;}
